# nuc2seg

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Makefile  README.md  main.nf  nextflow.config  pyproject.toml  version.config  volumetric.py
.cirro/: preprocess.py  process-form.json  process-input.json  process-output.json
.github/workflows/: bump_version.yml  containers.yml  python-black.yml  python-unittest.yml  sopa-baysor-container.yml  sopa-container.yml  sopa-stardist-container.yml  spatialdata-container.yml  stardist-container.yml
containers/sopa/: Dockerfile  extract_shapefile_from_sopa.py
containers/sopa-baysor/: Dockerfile
containers/sopa-stardist/: Dockerfile
containers/spatialdata/: Dockerfile  README.md  create_sd.py
containers/stardist/: Dockerfile
docs/: algorithm.rst  api.rst  cli.rst  command_line_interface.rst  conf.py  index.rst  inputs_and_outputs.rst  install.rst  mskcc_iris.rst  requirements.txt
nextflow/config/: base.config  baysor.config  local_test.config
nextflow/modules/nf-core/baysor/: main.nf
nextflow/modules/nf-core/baysor_postprocess/: main.nf
nextflow/modules/nf-core/baysor_preprocess_transcripts/: main.nf
nextflow/modules/nf-core/calculate_benchmarks/: main.nf
nextflow/modules/nf-core/celltyping/: main.nf
nextflow/modules/nf-core/combine_predictions/: main.nf
nextflow/modules/nf-core/combine_segmentations/: main.nf
nextflow/modules/nf-core/create_nuclear_anndata/: main.nf
nextflow/modules/nf-core/create_spatialdata/: main.nf
nextflow/modules/nf-core/get_n_tiles/: main.nf
nextflow/modules/nf-core/plot_predictions/: main.nf
nextflow/modules/nf-core/plot_roi/: main.nf
nextflow/modules/nf-core/predict/: main.nf
nextflow/modules/nf-core/preprocess/: main.nf
nextflow/modules/nf-core/segment/: main.nf
nextflow/modules/nf-core/sopa_extract_result/: main.nf
nextflow/modules/nf-core/sopa_extract_result_baysor/: main.nf
nextflow/modules/nf-core/sopa_extract_result_stardist/: main.nf
nextflow/modules/nf-core/sopa_patchify/: main.nf
nextflow/modules/nf-core/sopa_patchify_image/: main.nf
nextflow/modules/nf-core/sopa_patchify_transcripts/: main.nf
nextflow/modules/nf-core/sopa_read/: main.nf
nextflow/modules/nf-core/sopa_resolve/: main.nf
nextflow/modules/nf-core/sopa_resolve_baysor/: main.nf
nextflow/modules/nf-core/sopa_resolve_stardist/: main.nf
nextflow/modules/nf-core/sopa_segment/: main.nf
nextflow/modules/nf-core/sopa_segment_baysor/: main.nf
nextflow/modules/nf-core/sopa_segment_stardist/: main.nf
nextflow/modules/nf-core/tile_dataset/: main.nf
nextflow/modules/nf-core/tile_transcripts/: main.nf
nextflow/tests/config/: nextflow.config  test_data.config
nextflow/tests/data/: cell_boundaries.parquet  cell_typing_chain_0.h5  cells.parquet  downsampled_nucleus_boundaries.parquet  downsampled_transcripts.parquet  nucleus_boundaries.parquet  transcripts.parquet
src/nuc2seg/: benchmark.py  celltyping.py  celltyping_test.py  conftest.py  constants.py  data.py  data_loading.py  data_test.py  evaluate.py  evaluate_test.py  kernel_cell_segmentation.py  log_config.py  main.py  plotting.py  plotting_test.py  post_xenium_imaging.py  postprocess.py  postprocess_test.py  preprocessing.py  preprocessing_test.py  segment.py  segment_test.py  train.py  unet_model.py  unet_model_test.py  unet_parts.py  uniformity.py  utils.py  utils_test.py  xenium.py  xenium_utils.py
src/nuc2seg/cli/: autofluorescence_benchmark.py  baysor_postprocess.py  baysor_postprocess_test.py  baysor_preprocess_transcripts.py  benchmark.py  calculate_benchmarks.py  celltyping.py  combine_partial_segmentations.py  combine_predictions.py  combine_segmentations.py  create_interactive_segmentation_comparison.py  get_n_tiles.py  plot_celltyping_results.py  plot_predictions.py  plot_roi.py  predict.py  preprocess.py  preprocess_test.py  segment.py  segmented_xenium_to_anndata.py  tile_dataset.py  tile_transcripts.py  tile_xenium.py  train.py
(+23 files in other folders)
