[project]
name = "nuc2seg"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["spatial", "expression", "rna"]
authors = [
    {name = "Wesley Tansey", email = "TanseyW@mskcc.org" },
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" }
]

maintainers = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pandas>=2,<3",
    "scipy>=1.7,<2",
    "tqdm",
    "seaborn",
    "torch",
    "torchvision",
    "geopandas",
    "shapely",
    "matplotlib",
    "autograd-minimize",
    "scikit-learn",
    "pyarrow",
    "h5py",
    "blended-tiling==0.0.1.dev6",
    "lightning",
    "wandb",
    "opencv-contrib-python-headless",
    "anndata",
    "kneed==0.8.5",
    "rasterio",
    "zarr<3",
    "scikit-image",
    "pyometiff",
    "numpy_groupies",
    "statannotations"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["pytest", "pytest-mock", "tox", "coverage"]

[project.urls]
"Homepage" = "https://github.com/tansey-lab/nuc2seg"
"Documentation" = "https://nuc2seg.readthedocs.io/en/latest/"
"Source" = "https://github.com/tansey-lab/nuc2seg"

[project.scripts]
preprocess = "nuc2seg.cli.preprocess:main"
train = "nuc2seg.cli.train:main"
predict = "nuc2seg.cli.predict:main"
plot_predictions = "nuc2seg.cli.plot_predictions:main"
segment = "nuc2seg.cli.segment:main"
celltyping = "nuc2seg.cli.celltyping:main"
autofluorescence = "nuc2seg.cli.autofluorescence_benchmark:main"
tile_dataset = "nuc2seg.cli.tile_dataset:main"
tile_xenium = "nuc2seg.cli.tile_xenium:main"
baysor_postprocess = "nuc2seg.cli.baysor_postprocess:main"
combine_segmentations = "nuc2seg.cli.combine_segmentations:main"
combine_predictions = "nuc2seg.cli.combine_predictions:main"
get_n_tiles = "nuc2seg.cli.get_n_tiles:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
